Setup cards in dashboard

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -21,6 +21,28 @@
 
     <section class="card">
       <h2 class="title-card">Project Overview</h2>
+
+      <div class="card-small">
+        <h3 class="title-card-small">Design Project</h3>
+        <p class="card-description">Progress</p>
+        <div class="progress-bar">
+          <div class="progress-bar-fill" style="width: 50%"></div>
+        </div>
+        <p class="card-description">8/14 Tasks Completed</p>
+
+        <a href="#">View Team Members</a>
+      </div>
+
+      <div class="card-small">
+        <h3 class="title-card-small">Requirements Construction</h3>
+        <p class="card-description">Progress</p>
+        <div class="progress-bar">
+          <div class="progress-bar-fill" style="width: 80%"></div>
+        </div>
+        <p class="card-description">13/14 Tasks Completed</p>
+
+        <a href="#">View Team Members</a>
+      </div>
     </section>
 
     <section class="cards-container">
