Test (sent from my samsung smart fridge)

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -35,7 +35,7 @@
 
       <div class="card-small">
         <h3 class="title-card-small">Requirements Construction</h3>
-        <p class="card-description">Progress</p>
+        <p class="card-description">Progress...</p>
         <div class="progress-bar">
           <div class="progress-bar-fill" style="width: 80%"></div>
         </div>
