Dashboard mobile header start

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -13,7 +13,11 @@
   </head>
 
   <body>
-    <h1>Dashboard</h1>
+    <header class="header">
+      <h1>Dashboard</h1>
+      <!-- TODO replace '=' with a proper icon-->
+      <button class="mobile-nav-toggle">=</button>
+    </header>
 
     <section class="card">
       <h2 class="title-card">To-Do List</h2>
