--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -34,7 +34,7 @@
     <section class="card">
       <h2 class="title-card">Project Overview</h2>
       <div class="small-cards-wrapper">
-        <div class="card-small">
+        <div class="card-small bg-accent">
           <h3 class="title-card-small">Design Project</h3>
           <p class="card-description">Progress</p>
           <div class="progress-bar">
@@ -45,7 +45,7 @@
           <a href="#">View Team Members</a>
         </div>
 
-        <div class="card-small">
+        <div class="card-small bg-accent">
           <h3 class="title-card-small">Requirements Construction</h3>
           <p class="card-description">Progress...</p>
           <div class="progress-bar">
@@ -58,14 +58,36 @@
       </div>
     </section>
 
-    <section class="cards-container">
-      <div class="card-small-card">
-        <h2 class="title-card-small">Project 1</h2>
-        <p class="card-description">
+    <section class="myprojects-wrapper">
+      <div class="card-small">
+        <h2 class="title-card-small text-center">Project 1</h2>
+        <p class="card-description text-center">
           Part one of team project, creating a static page for presentation
         </p>
-        <a href="#">To-Dos</a>
-        <a href="#">View Team</a>
+        <div class="link-list text-center">
+          <a href="#">To-Dos</a>
+          <a href="#">View Team</a>
+        </div>
+      </div>
+      <div class="card-small">
+        <h2 class="title-card-small text-center">Project 2</h2>
+        <p class="card-description text-center">
+          Part two of team project, creating a static page for presentation
+        </p>
+        <div class="link-list text-center">
+          <a href="#">To-Dos</a>
+          <a href="#">View Team</a>
+        </div>
+      </div>
+      <div class="card-small">
+        <h2 class="title-card-small text-center">Project 3</h2>
+        <p class="card-description text-center">
+          Part three of team project, creating a static page for presentation
+        </p>
+        <div class="link-list text-center">
+          <a href="#">To-Dos</a>
+          <a href="#">View Team</a>
+        </div>
       </div>
     </section>
   </body>
