--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -57,10 +57,10 @@
         </div>
       </div>
     </section>
-
+    <h2 class="title-card">My Projects</h2>
     <section class="myprojects-wrapper">
       <div class="card-small">
-        <h2 class="title-card-small text-center">Project 1</h2>
+        <h3 class="title-card-small text-center">Project 1</h2>
         <p class="card-description text-center">
           Part one of team project, creating a static page for presentation
         </p>
@@ -70,7 +70,7 @@
         </div>
       </div>
       <div class="card-small">
-        <h2 class="title-card-small text-center">Project 2</h2>
+        <h3 class="title-card-small text-center">Project 2</h2>
         <p class="card-description text-center">
           Part two of team project, creating a static page for presentation
         </p>
@@ -80,7 +80,7 @@
         </div>
       </div>
       <div class="card-small">
-        <h2 class="title-card-small text-center">Project 3</h2>
+        <h3 class="title-card-small text-center">Project 3</h2>
         <p class="card-description text-center">
           Part three of team project, creating a static page for presentation
         </p>
