--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -15,80 +15,92 @@
   </head>
 
   <body>
-    <header class="header">
-      <h1>Dashboard</h1>
-      <!-- TODO replace '=' with a proper icon-->
-      <button class="mobile-nav-toggle">=</button>
-    </header>
+    <aside class="side-menu">
+      <img src="" alt="Make-it-all" width="40" height="40" />
+      <nav>
+        <ul>
+          <li data-active><a href="#">P</a></li>
+          <li><a href="#">Q</a></li>
+          <li data-active><a href="#">R</a></li>
+          <li><a href="#">S</a></li>
+        </ul>
+      </nav>
+    </aside>
+    <main>
+      <header class="header">
+        <h1>Dashboard</h1>
+        <!-- TODO replace '=' with a proper icon-->
+        <button class="mobile-nav-toggle">=</button>
+      </header>
+      <section class="card">
+        <div class="card-title-wrapper">
+          <h2 class="title-card">To-Do List</h2>
+          <button class="new-item">+</button>
+        </div>
+        <h3 class="title-card-small">Item</h3>
+        <hr class="item-break" />
+        <div id="task-list-overall"></div>
+      </section>
 
-    <section class="card">
-      <div class="card-title-wrapper">
-        <h2 class="title-card">To-Do List</h2>
-        <button class="new-item">+</button>
-      </div>
-      <h3 class="title-card-small">Item</h3>
-      <hr class="item-break" />
-      <div id="task-list-overall"></div>
-    </section>
+      <section class="card">
+        <h2 class="title-card">Project Overview</h2>
+        <div class="small-cards-wrapper">
+          <div class="card-small bg-accent">
+            <h3 class="title-card-small">Design Project</h3>
+            <p class="card-description">Progress</p>
+            <div class="progress-bar">
+              <div class="progress-bar-fill" style="width: 50%"></div>
+            </div>
+            <p class="card-description">8/14 Tasks Completed</p>
 
-    <section class="card">
-      <h2 class="title-card">Project Overview</h2>
-      <div class="small-cards-wrapper">
-        <div class="card-small bg-accent">
-          <h3 class="title-card-small">Design Project</h3>
-          <p class="card-description">Progress</p>
-          <div class="progress-bar">
-            <div class="progress-bar-fill" style="width: 50%"></div>
+            <a href="#">View Team Members</a>
           </div>
-          <p class="card-description">8/14 Tasks Completed</p>
 
-          <a href="#">View Team Members</a>
-        </div>
+          <div class="card-small bg-accent">
+            <h3 class="title-card-small">Requirements Construction</h3>
+            <p class="card-description">Progress...</p>
+            <div class="progress-bar">
+              <div class="progress-bar-fill" style="width: 80%"></div>
+            </div>
+            <p class="card-description">13/14 Tasks Completed</p>
 
-        <div class="card-small bg-accent">
-          <h3 class="title-card-small">Requirements Construction</h3>
-          <p class="card-description">Progress...</p>
-          <div class="progress-bar">
-            <div class="progress-bar-fill" style="width: 80%"></div>
+            <a href="#">View Team Members</a>
           </div>
-          <p class="card-description">13/14 Tasks Completed</p>
-
-          <a href="#">View Team Members</a>
         </div>
-      </div>
-    </section>
-    <h2 class="title-card">My Projects</h2>
-    <section class="myprojects-wrapper">
-      <div class="card-small">
-        <h3 class="title-card-small text-center">Project 1</h3>
-        <p class="card-description text-center">
-          Part one of team project, creating a static page for presentation
-        </p>
-        <div class="link-list text-center">
-          <a href="#">To-Dos</a>
-          <a href="#">View Team</a>
+      </section>
+      <h2 class="title-card">My Projects</h2>
+      <section class="myprojects-wrapper">
+        <div class="card-small">
+          <h3 class="title-card-small text-center">Project 1</h3>
+          <p class="card-description text-center">
+            Part one of team project, creating a static page for presentation
+          </p>
+          <div class="link-list text-center">
+            <a href="#">To-Dos</a>
+            <a href="#">View Team</a>
+          </div>
         </div>
-      </div>
-      <div class="card-small">
-        <h3 class="title-card-small text-center">Project 2</h3>
-        <p class="card-description text-center">
-          Part two of team project, creating a static page for presentation
-        </p>
-        <div class="link-list text-center">
-          <a href="#">To-Dos</a>
-          <a href="#">View Team</a>
+        <div class="card-small">
+          <h3 class="title-card-small text-center">Project 2</h3>
+          <p class="card-description text-center">
+            Part two of team project, creating a static page for presentation
+          </p>
+          <div class="link-list text-center">
+            <a href="#">To-Dos</a>
+            <a href="#">View Team</a>
+          </div>
         </div>
-      </div>
-      <div class="card-small">
-        <h3 class="title-card-small text-center">Project 3</h3>
-        <p class="card-description text-center">
-          Part three of team project, creating a static page for presentation
-        </p>
-        <div class="link-list text-center">
-          <a href="#">To-Dos</a>
-          <a href="#">View Team</a>
+        <div class="card-small">
+          <h3 class="title-card-small text-center">Project 3</h3>
+          <p class="card-description text-center">
+            Part three of team project, creating a static page for presentation
+          </p>
+          <div class="link-list text-center">
+            <a href="#">To-Dos</a>
+            <a href="#">View Team</a>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+    </main>
   </body>
 </html>
