--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -7,6 +7,7 @@
     <meta name="color-scheme" content="dark light" />
     <meta name="theme-color" content="#1e1e1e" />
 
+    <link rel="icon" type="image/svg" href="/tools.svg" />
     <link rel="stylesheet" href="/base.css" />
     <link rel="stylesheet" href="./style.css" />
     <script type="module" src="./script.js"></script>
