Added logo to dashboard side menu

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <aside class="side-menu">
-      <img src="" alt="Make-it-all" width="40" height="40" />
+      <img src="/tools.svg" alt="Make-it-all" width="100%" />
       <nav>
         <ul>
           <li data-active><a href="#">P</a></li>
