--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -22,7 +22,7 @@
         <ul>
           <li data-active><a href="#">P</a></li>
           <li><a href="#">Q</a></li>
-          <li data-active><a href="#">R</a></li>
+          <li><a href="#">R</a></li>
           <li><a href="#">S</a></li>
         </ul>
       </nav>
@@ -103,5 +103,9 @@
         </div>
       </section>
     </main>
+
+    <dialog class="modal" id="dialog-new-task">
+      <h2 class="title-card">Add New Task</h2>
+    </dialog>
   </body>
 </html>
