--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -35,10 +35,14 @@
       </header>
       <section class="card">
         <div class="card-title-wrapper">
-          <h2 class="title-card">To-Do List</h2>
+          <h2 class="title-card">Task List</h2>
           <button class="new-item">+</button>
         </div>
-        <h3 class="title-card-small">Item</h3>
+        <div class="task-list-item">
+          <h3 class="title-card-small">Task</h3>
+          <h3 class="title-card-small">Details</h3>
+          <h3 class="title-card-small">Deadline</h3>
+        </div>
         <hr class="item-break" />
         <div id="task-list-overall"></div>
       </section>
