Task details hide in mobile

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="task-list-item">
           <h3 class="title-card-small">Task</h3>
-          <h3 class="title-card-small">Details</h3>
+          <h3 class="title-card-small mobile-hidden">Details</h3>
           <h3 class="title-card-small">Deadline</h3>
         </div>
         <hr class="item-break" />
