Logo, register button and other text added to the login page
(It has still only been developed for a mobile browser currently. Some more design changes are also needed.)

--- a/web/login/index.html
+++ b/web/login/index.html
@@ -17,7 +17,8 @@
 
 <body>
 
-	<h1>Make-It-All</h1>
+	<h1>Make-It-All <span>Portal</span></h1>
+	<img src="../screwdriver-icon.png" alt="Make-It-All-Icon" class="icon">
 
 	<p></p>
 
@@ -29,6 +30,8 @@
 			<input type="text" id="email-box" placeholder="Enter email"><br>
 			<input type="password" id="password-box" placeholder="Password"><br>
 			<input type="submit" id="submit-button" value="Sign In">
+			<label id="no-account-text">Dont have an account?</label>
+			<input type="submit" id="register-button" value="Register now">
 		</form>
 	</div>
 
