--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -35,16 +35,21 @@
       </header>
       <section class="card">
         <div class="card-title-wrapper">
-          <h2 class="title-card">Task List</h2>
+          <h2 class="title-card">Tasks</h2>
           <button class="new-item">+</button>
         </div>
-        <div class="task-list-item">
+        <!-- <div class="task-list-item">
           <h3 class="title-card-small">Task</h3>
           <h3 class="title-card-small mobile-hidden">Details</h3>
           <h3 class="title-card-small">Deadline</h3>
         </div>
         <hr class="item-break" />
-        <div id="task-list-overall"></div>
+        <div id="task-list-overall"></div> -->
+        <div class="kanban-wrapper">
+          <div class="kanban-section"></div>
+          <div class="kanban-section"></div>
+          <div class="kanban-section"></div>
+        </div>
       </section>
 
       <section class="card">
