--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -38,17 +38,16 @@
           <h2 class="title-card">Tasks</h2>
           <button class="new-item">+</button>
         </div>
-        <!-- <div class="task-list-item">
-          <h3 class="title-card-small">Task</h3>
-          <h3 class="title-card-small mobile-hidden">Details</h3>
-          <h3 class="title-card-small">Deadline</h3>
-        </div>
-        <hr class="item-break" />
-        <div id="task-list-overall"></div> -->
         <div class="kanban-wrapper">
-          <div class="kanban-section"></div>
-          <div class="kanban-section"></div>
-          <div class="kanban-section"></div>
+          <div class="kanban-section">
+            <h3 class="title-card">To-Do</h3>
+          </div>
+          <div class="kanban-section">
+            <h3 class="title-card">In Progress</h3>
+          </div>
+          <div class="kanban-section">
+            <h3 class="title-card">Completed</h3>
+          </div>
         </div>
       </section>
 
