Account info in header

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -31,6 +31,14 @@
       <h1>Dashboard</h1>
       <!-- TODO replace '=' with a proper icon-->
       <button class="mobile-nav-toggle">=</button>
+      <div class="account-info flex-row">
+        <div class="flex-col">
+          <h6>King Firat</h6>
+          <p class="dimmed">Manager</p>
+        </div>
+        <img src="https://placekitten.com/50/50" alt="" />
+        <p>^</p>
+      </div>
     </header>
     <main>
       <section class="card">
