Project overview added in js, with colourful progress bars

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -63,28 +63,19 @@
 
       <section class="card">
         <h2 class="title-card">Project Overview</h2>
-        <div class="small-cards-wrapper">
-          <div class="card-small bg-accent">
+        <div class="small-cards-wrapper" id="project-overview-wrapper">
+          <!-- <div class="card-small bg-accent">
             <h3 class="title-card-small">Design Project</h3>
             <p class="card-description">Progress</p>
             <div class="progress-bar">
-              <div class="progress-bar-fill" style="width: 50%"></div>
+              <div
+                class="progress-bar-fill"
+                style="width: 50%; --bar-fill: var(--colour-amber)"
+              ></div>
             </div>
             <p class="card-description">8/14 Tasks Completed</p>
-
             <a href="#">View Team Members</a>
-          </div>
-
-          <div class="card-small bg-accent">
-            <h3 class="title-card-small">Requirements Construction</h3>
-            <p class="card-description">Progress...</p>
-            <div class="progress-bar">
-              <div class="progress-bar-fill" style="width: 80%"></div>
-            </div>
-            <p class="card-description">13/14 Tasks Completed</p>
-
-            <a href="#">View Team Members</a>
-          </div>
+          </div> -->
         </div>
       </section>
       <h2 class="title-card">My Projects</h2>
