--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -78,6 +78,20 @@
           </div> -->
         </div>
       </section>
+
+      <section class="card">
+        <h2 class="title-card">My Teams</h2>
+        <div class="myprojects-wrapper">
+          <div class="card-small accent-outline flex-col text-center">
+            <h3 class="title-card-small">Design</h3>
+            <p class="description">
+              Team responsible for the design of the webpage
+            </p>
+            <a class="fg-accent" href="#">View My Team</a>
+          </div>
+        </div>
+      </section>
+
       <h2 class="title-card">My Projects</h2>
       <section class="myprojects-wrapper">
         <div class="card-small">
