My teams cards added in js

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -81,15 +81,7 @@
 
       <section class="card">
         <h2 class="title-card">My Teams</h2>
-        <div class="myprojects-wrapper">
-          <div class="card-small accent-outline flex-col text-center">
-            <h3 class="title-card-small">Design</h3>
-            <p class="description">
-              Team responsible for the design of the webpage
-            </p>
-            <a class="fg-accent" href="#">View My Team</a>
-          </div>
-        </div>
+        <div class="myprojects-wrapper" id="teams-wrapper"></div>
       </section>
 
       <h2 class="title-card">My Projects</h2>
