--- a/web/registration/index.html
+++ b/web/registration/index.html
@@ -41,7 +41,7 @@
 
 	</div>
 	<!--code for the background thingy, can use for the login as well as others that use this thing.-->
-	<svg>
+	<svg id="waves">
 		<path d="M 1 1 L 1 901 L 1651 901 C 2120 81 371 396 1 1" stroke="var(--colour-accent)" fill="var(--colour-accent)"/>
 	</svg>
 </body>
