dashboard onChange of current user

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -64,18 +64,6 @@
       <section class="card">
         <h2 class="title-card">Project Overview</h2>
         <div class="small-cards-wrapper" id="project-overview-wrapper">
-          <!-- <div class="card-small bg-accent">
-            <h3 class="title-card-small">Design Project</h3>
-            <p class="card-description">Progress</p>
-            <div class="progress-bar">
-              <div
-                class="progress-bar-fill"
-                style="width: 50%; --bar-fill: var(--colour-amber)"
-              ></div>
-            </div>
-            <p class="card-description">8/14 Tasks Completed</p>
-            <a href="#">View Team Members</a>
-          </div> -->
         </div>
       </section>
 
@@ -123,7 +111,7 @@
       <h2 class="title-card">Add New Task</h2>
       <form class="modal-form">
         <textarea placeholder="Write Task description here..."></textarea>
-        <select>
+        <select id="options-project">
           <option value="">Select project to add Task to</option>
           <option value="0x001">Project 1</option>
           <option value="0x5a">Design Project</option>
