--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -20,10 +20,11 @@
       <img src="/screwdriver-icon.png" alt="Make-it-all" width="100%" />
       <nav>
         <ul>
-          <li data-active><a href="#">P</a></li>
-          <li><a href="#">Q</a></li>
-          <li><a href="#">R</a></li>
-          <li><a href="#">S</a></li>
+          <li data-active>
+            <a href="#" class="material-symbols-outlined">leaderboard</a>
+          </li>
+          <li><a href="#" class="material-symbols-outlined">menu_book</a></li>
+          <li><a href="#" class="material-symbols-outlined">mail</a></li>
         </ul>
       </nav>
     </aside>
@@ -63,8 +64,7 @@
 
       <section class="card">
         <h2 class="title-card">Project Overview</h2>
-        <div class="small-cards-wrapper" id="project-overview-wrapper">
-        </div>
+        <div class="small-cards-wrapper" id="project-overview-wrapper"></div>
       </section>
 
       <section class="card">
