--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -30,22 +30,22 @@
     </aside>
     <header class="header">
       <h1>Dashboard</h1>
-      <!-- TODO replace '=' with a proper icon-->
-      <button class="mobile-nav-toggle">=</button>
+      <button class="mobile-nav-toggle material-symbols-outlined">menu</button>
       <div class="account-info flex-row">
         <div class="flex-col">
           <h6>King Firat</h6>
           <p class="dimmed">Manager</p>
         </div>
         <img src="https://placekitten.com/50/50" alt="" />
-        <p>^</p>
+        <p class="material-symbols-outlined dimmed">expand_more</p>
+        <p class="material-symbols-outlined dimmed">logout</p>
       </div>
     </header>
     <main>
       <section class="card">
         <div class="card-title-wrapper">
           <h2 class="title-card">Tasks</h2>
-          <button class="new-item">+</button>
+          <button class="new-item material-symbols-outlined">add</button>
         </div>
         <div class="kanban-wrapper">
           <div class="kanban-section">
