--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -45,7 +45,21 @@
       <section class="card">
         <div class="card-title-wrapper">
           <h2 class="title-card">Tasks</h2>
-          <button class="new-item material-symbols-outlined">add</button>
+          <div class="flex-row">
+            <button
+              class="btn-action material-symbols-outlined"
+              data-secondary
+              data-action="filter-tasks"
+            >
+              filter_list
+            </button>
+            <button
+              class="btn-action material-symbols-outlined"
+              data-action="new-task"
+            >
+              add
+            </button>
+          </div>
         </div>
         <div class="kanban-wrapper">
           <div class="kanban-section">
