Action buttons for desktop

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -47,17 +47,16 @@
           <h2 class="title-card">Tasks</h2>
           <div class="flex-row">
             <button
-              class="btn-action material-symbols-outlined"
+              class="btn-action"
               data-secondary
               data-action="filter-tasks"
             >
-              filter_list
+              <p>Filter By</p>
+              <span class="material-symbols-outlined">filter_list</span>
             </button>
-            <button
-              class="btn-action material-symbols-outlined"
-              data-action="new-task"
-            >
-              add
+            <button class="btn-action" data-action="new-task">
+              <p>New Task</p>
+              <span class="material-symbols-outlined">add</span>
             </button>
           </div>
         </div>
