--- a/web/registration/index.html
+++ b/web/registration/index.html
@@ -17,7 +17,7 @@
 <body>
 	<header class="header">
 		<h1><u>Make-it-all</u> <span>Portal</span></h1>
-		<img src="/screwdriver-icon.png" alt="Make-it-all" class="icon">
+		<img src="/tools.svg" alt="Make-it-all" class="icon">
 		<!--need to fix the position of the icon-->
 
 	</header>
