--- a/web/login/index.html
+++ b/web/login/index.html
@@ -18,7 +18,7 @@
 <body>
 
 	<h1>Make-It-All <span>Portal</span></h1>
-	<img src="../screwdriver-icon.png" alt="Make-It-All-Icon" class="icon">
+	<img src="../tools.svg" alt="Make-It-All-Icon" class="icon">
 
 	<p></p>
 
