--- a/web/project/index.html
+++ b/web/project/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light" />
     <meta name="theme-color" content="#1e1e1e" />
-    <link rel="icon" type="image/svg" href="/screwdriver-icon.png" />
+    <link rel="icon" type="image/svg" href="/tools.svg" />
     <link rel="stylesheet" href="/base.css" />
     <link rel="stylesheet" href="./style.css" />
 	<link rel="stylesheet" href="./css-circular-prog-bar.css" />
@@ -17,7 +17,7 @@
   <body>
 
     <aside class="side-menu">
-      <img src="/screwdriver-icon.png" alt="Make-it-all" width="100%" />
+      <img src="/tools.svg" alt="Make-it-all" width="100%" />
       <nav>
         <ul>
           <li data-active>
