create new task close dialog button

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -21,7 +21,7 @@
       <nav>
         <ul>
           <li data-active>
-            <a href="#" class="material-symbols-outlined">leaderboard</a>
+            <a href="/dashboard/" class="material-symbols-outlined">leaderboard</a>
           </li>
           <li><a href="#" class="material-symbols-outlined">menu_book</a></li>
           <li><a href="#" class="material-symbols-outlined">mail</a></li>
@@ -122,6 +122,7 @@
 
     <dialog class="modal" id="dialog-new-task">
       <h2 class="title-card">Add New Task</h2>
+      <button class="dialog-close btn-accent">X</button>
       <form class="modal-form">
         <textarea placeholder="Write Task description here..."></textarea>
         <select id="options-project">
