--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -124,16 +124,18 @@
       <h2 class="title-card">Add New Task</h2>
       <button class="dialog-close btn-accent">X</button>
       <form class="modal-form">
-        <textarea placeholder="Write Task description here..."></textarea>
-        <select id="options-project">
+        <input name="title" type="text" placeholder="Task Title..." required>
+        <textarea name="desc" placeholder="Write Task description here..."></textarea>
+        <select name="project" id="options-project">
           <option value="">Select project to add Task to</option>
-          <option value="0x001">Project 1</option>
-          <option value="0x5a">Design Project</option>
-          <option value="0x27">Project 3</option>
+          <option value="user">Personal TODO</option>
+          <option value="1">Project 1</option>
+          <option value="2">Design Project</option>
+          <option value="3">Project 3</option>
         </select>
         <div class="input-label">
           <label for="task-date">Enter Deadline for Task:</label>
-          <input type="date" id="task-date" />
+          <input name="deadline" type="date" id="task-date"/>
         </div>
         <div class="end-button">
           <button class="btn-accent">Submit Item</button>
