side menu and header started

--- a/web/profile/index.html
+++ b/web/profile/index.html
@@ -7,18 +7,40 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="color-scheme" content="dark light">
 	<meta name="theme-color" content="#1e1e1e">
-
+	<link rel="stylesheet" href="./style.css" />
 	<link rel="stylesheet" href="/base.css">
 
-	<title>Trelno</title>
+	<title>Profile page</title>
 </head>
 
 <body>
-
-	<h1>Trelno</h1>
-
-	<p>Hello world</p>
-
+	<aside class="side-menu">
+		<img src="/tools.svg" alt="Make-it-all" width="100%" />
+		<nav>
+		<ul>
+			<li data-active>
+			<a href="/dashboard/" class="material-symbols-outlined">leaderboard</a>
+			</li>
+			<li><a href="#" class="material-symbols-outlined">menu_book</a></li>
+			<li><a href="#" class="material-symbols-outlined">mail</a></li>
+		</ul>
+		</nav>
+	</aside>
+	<main>
+		<header class="header">
+			<h1>My Profile</h1>
+			<button class="mobile-nav-toggle material-symbols-outlined">menu</button>
+			<div class="account-info flex-row">
+			<div class="flex-col">
+				<h6>King Firat</h6>
+				<p class="dimmed">Manager</p>
+			</div>
+			<img src="https://placekitten.com/50/50" alt="" />
+			<p class="material-symbols-outlined dimmed">expand_more</p>
+			<p class="material-symbols-outlined dimmed">logout</p>
+			</div>
+		</header>
+	</main>
 </body>
 
 </html>
