fix dialog close button
(sorry Tom)

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -21,7 +21,9 @@
       <nav>
         <ul>
           <li data-active>
-            <a href="/dashboard/" class="material-symbols-outlined">leaderboard</a>
+            <a href="/dashboard/" class="material-symbols-outlined"
+              >leaderboard</a
+            >
           </li>
           <li><a href="#" class="material-symbols-outlined">menu_book</a></li>
           <li><a href="#" class="material-symbols-outlined">mail</a></li>
@@ -121,11 +123,18 @@
     </main>
 
     <dialog class="modal" id="dialog-new-task">
-      <h2 class="title-card">Add New Task</h2>
-      <button class="dialog-close btn-accent">X</button>
+      <div class="flex-row kanban-title">
+        <h2 class="title-card">Add New Task</h2>
+        <button class="material-symbols-outlined btn-icon dialog-close">
+          close
+        </button>
+      </div>
       <form class="modal-form">
-        <input name="title" type="text" placeholder="Task Title..." required>
-        <textarea name="desc" placeholder="Write Task description here..."></textarea>
+        <input name="title" type="text" placeholder="Task Title..." required />
+        <textarea
+          name="desc"
+          placeholder="Write Task description here..."
+        ></textarea>
         <select name="project" id="options-project">
           <option value="">Select project to add Task to</option>
           <option value="user">Personal TODO</option>
@@ -135,7 +144,7 @@
         </select>
         <div class="input-label">
           <label for="task-date">Enter Deadline for Task:</label>
-          <input name="deadline" type="date" id="task-date"/>
+          <input name="deadline" type="date" id="task-date" />
         </div>
         <div class="end-button">
           <button class="btn-accent">Submit Item</button>
