--- a/web/profile/index.html
+++ b/web/profile/index.html
@@ -8,7 +8,7 @@
 	<meta name="color-scheme" content="dark light">
 	<meta name="theme-color" content="#1e1e1e">
 	<link rel="stylesheet" href="./style.css" />
-	<link rel="stylesheet" href="/base.css">
+	<link rel="stylesheet" href="../base.css">
 
 	<title>Profile page</title>
 </head>
@@ -26,20 +26,25 @@
 		</ul>
 		</nav>
 	</aside>
+	<header class="header">
+		<h1>My Profile</h1>
+		<button class="mobile-nav-toggle material-symbols-outlined">menu</button>
+		<div class="account-info">
+		<div class="flex-col">
+			<h6>King Firat</h6>
+			<p class="dimmed">Manager</p>
+		</div>
+		<img src="https://placekitten.com/50/50" alt="" />
+		<p class="material-symbols-outlined dimmed">expand_more</p>
+		<p class="material-symbols-outlined dimmed">logout</p>
+		</div>
+	</header>
 	<main>
-		<header class="header">
-			<h1>My Profile</h1>
-			<button class="mobile-nav-toggle material-symbols-outlined">menu</button>
-			<div class="account-info flex-row">
-			<div class="flex-col">
-				<h6>King Firat</h6>
-				<p class="dimmed">Manager</p>
+		<section class="card">
+			<div class="card-title-wrapper">
+				<h2 class="title-card">King Firat</h2>
 			</div>
-			<img src="https://placekitten.com/50/50" alt="" />
-			<p class="material-symbols-outlined dimmed">expand_more</p>
-			<p class="material-symbols-outlined dimmed">logout</p>
-			</div>
-		</header>
+		</section>
 	</main>
 </body>
 
