--- a/web/profile/index.html
+++ b/web/profile/index.html
@@ -7,8 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="color-scheme" content="dark light">
 	<meta name="theme-color" content="#1e1e1e">
-	<link rel="stylesheet" href="./style.css" />
 	<link rel="stylesheet" href="../base.css">
+	<link rel="stylesheet" href="./style.css" />
+
 
 	<title>Profile page</title>
 </head>
@@ -29,7 +30,7 @@
 	<header class="header">
 		<h1>My Profile</h1>
 		<button class="mobile-nav-toggle material-symbols-outlined">menu</button>
-		<div class="account-info">
+		<div class="account-info flex-row">
 		<div class="flex-col">
 			<h6>King Firat</h6>
 			<p class="dimmed">Manager</p>
