dark light to light dark

--- a/web/knowledge/index.html
+++ b/web/knowledge/index.html
@@ -7,15 +7,13 @@
     <meta name="color-scheme" content="light dark" />
     <meta name="theme-color" content="#1e1e1e" />
 
-    <link rel="icon" type="image/svg" href="/tools.svg" />
     <link rel="stylesheet" href="/base.css" />
 
-    <title>Trelno</title>
+    <title>Knowledge</title>
   </head>
 
   <body>
     <h1>Trelno</h1>
-
     <p>Hello world</p>
   </body>
 </html>
