--- a/web/project/index.html
+++ b/web/project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="dark light" />
+    <meta name="color-scheme" content="light dark" />
     <meta name="theme-color" content="#1e1e1e" />
     <link rel="icon" type="image/svg" href="/tools.svg" />
     <link rel="stylesheet" href="/base.css" />
@@ -30,7 +30,7 @@
     </aside>
 
     <main>
-	
+
       <header class="header">
         <h1>Project X</h1>
         <button class="mobile-nav-toggle">=</button>
@@ -43,7 +43,7 @@
           <p class="material-symbols-outlined dimmed">expand_more</p>
           <p class="material-symbols-outlined dimmed">logout</p>
 
-        </div>        
+        </div>
       </header>
 
       <section class="card">
@@ -60,7 +60,7 @@
       <section class="topcards-wrapper">
 
         <div class="card-small">
-          <h3 class="title-card-small text-center"> Project progress </h3> 
+          <h3 class="title-card-small text-center"> Project progress </h3>
           <div class="progress-circle p23 div-center">
             <span>10%</span>
             <div class="left-half-clipper">
@@ -72,14 +72,14 @@
 
         <div class="card-small">
           <h3 class="title-card-small text-center"> Project deadline </h3>
-          <div class="flex-col-center"> 
+          <div class="flex-col-center">
             <p class="deadline-date"> 30th <br> October 2022 </p>
         </div>
         </div>
 
         <div class="card-small">
           <h3 class="title-card-small text-center"> Project manager </h3>
-          <div class="flex-col-center"> 
+          <div class="flex-col-center">
             <p class="PM-name"> Firat Batmaz </p>
             <img src="https://placekitten.com/50/50" alt="" class="PM-image" />
         </div>
