--- a/web/profile/index.html
+++ b/web/profile/index.html
@@ -1,52 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="light dark" />
+    <meta name="theme-color" content="#1e1e1e" />
+    <link rel="stylesheet" href="../base.css" />
+    <link rel="stylesheet" href="./style.css" />
 
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="color-scheme" content="dark light">
-	<meta name="theme-color" content="#1e1e1e">
-	<link rel="stylesheet" href="../base.css">
-	<link rel="stylesheet" href="./style.css" />
+    <title>Profile page</title>
+  </head>
 
-
-	<title>Profile page</title>
-</head>
-
-<body>
-	<aside class="side-menu">
-		<img src="/tools.svg" alt="Make-it-all" width="100%" />
-		<nav>
-		<ul>
-			<li data-active>
-			<a href="/dashboard/" class="material-symbols-outlined">leaderboard</a>
-			</li>
-			<li><a href="#" class="material-symbols-outlined">menu_book</a></li>
-			<li><a href="#" class="material-symbols-outlined">mail</a></li>
-		</ul>
-		</nav>
-	</aside>
-	<header class="header">
-		<h1>My Profile</h1>
-		<button class="mobile-nav-toggle material-symbols-outlined">menu</button>
-		<div class="account-info flex-row">
-		<div class="flex-col">
-			<h6>King Firat</h6>
-			<p class="dimmed">Manager</p>
-		</div>
-		<img src="https://placekitten.com/50/50" alt="" />
-		<p class="material-symbols-outlined dimmed">expand_more</p>
-		<p class="material-symbols-outlined dimmed">logout</p>
-		</div>
-	</header>
-	<main>
-		<section class="card">
-			<div class="card-title-wrapper">
-				<h2 class="title-card">King Firat</h2>
-			</div>
-		</section>
-	</main>
-</body>
-
+  <body>
+    <aside class="side-menu">
+      <img src="/tools.svg" alt="Make-it-all" width="100%" />
+      <nav>
+        <ul>
+          <li data-active>
+            <a href="/dashboard/" class="material-symbols-outlined"
+              >leaderboard</a
+            >
+          </li>
+          <li><a href="#" class="material-symbols-outlined">menu_book</a></li>
+          <li><a href="#" class="material-symbols-outlined">mail</a></li>
+        </ul>
+      </nav>
+    </aside>
+    <header class="header">
+      <h1>My Profile</h1>
+      <button class="mobile-nav-toggle material-symbols-outlined">menu</button>
+      <div class="account-info flex-row">
+        <div class="flex-col">
+          <h6>King Firat</h6>
+          <p class="dimmed">Manager</p>
+        </div>
+        <img src="https://placekitten.com/50/50" alt="" />
+        <p class="material-symbols-outlined dimmed">expand_more</p>
+        <p class="material-symbols-outlined dimmed">logout</p>
+      </div>
+    </header>
+    <main>
+      <section class="card">
+        <div class="card-title-wrapper">
+          <h2 class="title-card">King Firat</h2>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
