--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="dark light" />
+    <meta name="color-scheme" content="light dark" />
     <meta name="theme-color" content="#1e1e1e" />
 
     <link rel="icon" type="image/svg" href="/tools.svg" />
@@ -25,8 +25,12 @@
               >leaderboard</a
             >
           </li>
-          <li><a href="#" class="material-symbols-outlined">menu_book</a></li>
-          <li><a href="#" class="material-symbols-outlined">mail</a></li>
+          <li>
+            <a href="/knowledge/" class="material-symbols-outlined"
+              >menu_book</a
+            >
+          </li>
+          <!-- <li><a href="#" class="material-symbols-outlined">mail</a></li> -->
         </ul>
       </nav>
     </aside>
@@ -35,10 +39,15 @@
       <button class="mobile-nav-toggle material-symbols-outlined">menu</button>
       <div class="account-info flex-row">
         <div class="flex-col">
-          <h6>King Firat</h6>
+          <h6 id="username">King Firat</h6>
           <p class="dimmed">Manager</p>
         </div>
-        <img src="https://placekitten.com/50/50" alt="" />
+        <img
+          src="https://placekitten.com/50/50"
+          alt="User Profile Picture"
+          width="50"
+          height="50"
+        />
         <p class="material-symbols-outlined dimmed">expand_more</p>
         <p class="material-symbols-outlined dimmed">logout</p>
       </div>
