... Btn to close nav dialog

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -19,7 +19,9 @@
     <dialog class="nav-mobile">
       <div class="flex-row kanban-title">
         <h2>Menu</h2>
-        <button class="btn-icon material-symbols-outlined">close</button>
+        <button class="btn-icon material-symbols-outlined dialog-close">
+          close
+        </button>
       </div>
       <nav>
         <ul>
