formatting + fixed missing end tags

--- a/web/project/index.html
+++ b/web/project/index.html
@@ -9,13 +9,12 @@
     <link rel="icon" type="image/svg" href="/tools.svg" />
     <link rel="stylesheet" href="/base.css" />
     <link rel="stylesheet" href="./style.css" />
-	<link rel="stylesheet" href="./css-circular-prog-bar.css" />
+    <link rel="stylesheet" href="./css-circular-prog-bar.css" />
     <script type="module" src="./script.js"></script>
     <title>Project details</title>
   </head>
 
   <body>
-
     <aside class="side-menu">
       <img src="/tools.svg" alt="Make-it-all" width="100%" />
       <nav>
@@ -30,7 +29,6 @@
     </aside>
 
     <main>
-
       <header class="header">
         <h1>Project X</h1>
         <button class="mobile-nav-toggle">=</button>
@@ -42,7 +40,6 @@
           <img src="https://placekitten.com/50/50" alt="" />
           <p class="material-symbols-outlined dimmed">expand_more</p>
           <p class="material-symbols-outlined dimmed">logout</p>
-
         </div>
       </header>
 
@@ -51,16 +48,14 @@
           <h2 class="title-card">About project</h2>
         </div>
         <hr class="item-break" />
-		<div class="card-content">
-		  <p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-		  </p>
+        <div class="card-content">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
       </section>
 
       <section class="topcards-wrapper">
-
         <div class="card-small">
-          <h3 class="title-card-small text-center"> Project progress </h3>
+          <h3 class="title-card-small text-center">Project progress</h3>
           <div class="progress-circle p23 div-center">
             <span>10%</span>
             <div class="left-half-clipper">
@@ -71,20 +66,23 @@
         </div>
 
         <div class="card-small">
-          <h3 class="title-card-small text-center"> Project deadline </h3>
+          <h3 class="title-card-small text-center">Project deadline</h3>
           <div class="flex-col-center">
-            <p class="deadline-date"> 30th <br> October 2022 </p>
-        </div>
+            <p class="deadline-date">
+              30th <br />
+              October 2022
+            </p>
+          </div>
         </div>
 
         <div class="card-small">
-          <h3 class="title-card-small text-center"> Project manager </h3>
+          <h3 class="title-card-small text-center">Project manager</h3>
           <div class="flex-col-center">
-            <p class="PM-name"> Firat Batmaz </p>
+            <p class="PM-name">Firat Batmaz</p>
             <img src="https://placekitten.com/50/50" alt="" class="PM-image" />
+          </div>
         </div>
-
-        </section>
+      </section>
 
       <section class="card">
         <div class="card-title-wrapper">
@@ -107,43 +105,42 @@
       </section>
 
       <section class="card">
-		<div class="card-title-wrapper">
-			<h2 class="title-card">Teams on this project</h2>
-		</div>
+        <div class="card-title-wrapper">
+          <h2 class="title-card">Teams on this project</h2>
+        </div>
 
-		<div class="small-cards-wrapper-center">
-			<div class="card-small bg-accent">
-        <h3 class="title-card-small text-center"> Team 1 </h3>
-				<div>
-					<img src="Members.png" alt="Team members" width="100%">
-				</div>
-				<div class="link-list text-center">
-					<a href="#">View Team Members</a>
-				</div>
-			</div>
+        <div class="small-cards-wrapper-center">
+          <div class="card-small bg-accent">
+            <h3 class="title-card-small text-center">Team 1</h3>
+            <div>
+              <img src="Members.png" alt="Team members" width="100%" />
+            </div>
+            <div class="link-list text-center">
+              <a href="#">View Team Members</a>
+            </div>
+          </div>
 
-			<div class="card-small bg-accent">
-        <h3 class="title-card-small text-center"> Team 2 </h3>
-        <div>
-					<img src="Members.png" alt="Team members" width="100%">
-				</div>
-				<div class="link-list text-center">
-					<a href="#">View Team Members</a>
-				</div>
-			</div>
+          <div class="card-small bg-accent">
+            <h3 class="title-card-small text-center">Team 2</h3>
+            <div>
+              <img src="Members.png" alt="Team members" width="100%" />
+            </div>
+            <div class="link-list text-center">
+              <a href="#">View Team Members</a>
+            </div>
+          </div>
 
-			<div class="card-small bg-accent">
-				<h3 class="title-card-small text-center"> Team 3 </h3>
-        <div>
-					<img src="Members.png" alt="Team members" width="100%">
-				</div>
-				<div class="link-list text-center">
-					<a href="#">View Team Members</a>
-				</div>
-			</div>
-		</div>
+          <div class="card-small bg-accent">
+            <h3 class="title-card-small text-center">Team 3</h3>
+            <div>
+              <img src="Members.png" alt="Team members" width="100%" />
+            </div>
+            <div class="link-list text-center">
+              <a href="#">View Team Members</a>
+            </div>
+          </div>
+        </div>
       </section>
-
     </main>
 
     <dialog class="modal" id="dialog-new-task">
