select options actually work, I can do booleans

--- a/web/dashboard/index.html
+++ b/web/dashboard/index.html
@@ -179,13 +179,10 @@
         <select name="project" id="options-project">
           <option value="">Select project to add Task to</option>
           <option value="user">Personal TODO</option>
-          <option value="1">Project 1</option>
-          <option value="2">Design Project</option>
-          <option value="3">Project 3</option>
         </select>
         <div class="input-label">
           <label for="task-date">Enter Deadline for Task:</label>
-          <input name="deadline" type="date" id="task-date" />
+          <input name="deadline" type="date" id="task-date" required />
         </div>
         <div class="end-button">
           <button class="btn-accent">Submit Item</button>
